[gd_scene load_steps=7 format=3 uid="uid://b8ppxm1604yxa"]

[ext_resource type="Script" path="res://entities/EnemyCrawler.gd" id="1_uf7pf"]
[ext_resource type="Texture2D" uid="uid://bnfsfht7sjmi2" path="res://bitmaps/Sasha stuff/crawler/crawler_vector_walking.png" id="2_j35q3"]
[ext_resource type="Texture2D" uid="uid://bpxlkigpr7lfx" path="res://bitmaps/Sasha stuff/crawler/crawler_vector_open_eye.png" id="3_5oifl"]
[ext_resource type="Texture2D" uid="uid://c25qqto6thi4b" path="res://bitmaps/Sasha stuff/crawler/crawler_vector_squint.png" id="4_5tyhw"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ys4i2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_j35q3")
}, {
"duration": 1.0,
"texture": ExtResource("3_5oifl")
}],
"loop": true,
"name": &"crawl",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_5oifl")
}, {
"duration": 1.0,
"texture": ExtResource("4_5tyhw")
}],
"loop": true,
"name": &"shoot",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ish02"]
radius = 12.0

[node name="EnemyCrawler" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 15
motion_mode = 1
wall_min_slide_angle = 0.0
safe_margin = 3.0
script = ExtResource("1_uf7pf")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(5.96046e-08, 3)
scale = Vector2(1.1545, 1.1545)
sprite_frames = SubResource("SpriteFrames_ys4i2")
animation = &"crawl"
frame_progress = 0.992298

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ish02")

[node name="DeathTimer" type="Timer" parent="."]

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="DownMarker" type="Marker2D" parent="."]
position = Vector2(0, 11)

[node name="ForwardMarker" type="Marker2D" parent="."]
position = Vector2(-20, 0)

[node name="FallMarker" type="Marker2D" parent="."]
position = Vector2(-23, 23)

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
